--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -193,7 +193,8 @@ You can also use the system set manager (SSM) to compare the configuration file 
 == Jinja templating on {salt} Clients
 
 Jinja templating is possible on {salt} Clients.
-Jinja variables can be used in {salt} pillars or grains in a configuration file of a {salt} state channel.
+Jinja provides variables from pillars or grains.
+They can be used in configuration files or {salt} states.
 
 // create a pillar for each macro
 
