add jinja example (per feedback)

--- a/modules/client-configuration/pages/configuration-management.adoc
+++ b/modules/client-configuration/pages/configuration-management.adoc
@@ -196,7 +196,21 @@ Jinja templating is possible on {salt} Clients.
 Jinja provides variables from pillars or grains.
 They can be used in configuration files or {salt} states.
 
-// create a pillar for each macro
+For more information, see https://docs.saltproject.io/salt/user-guide/en/latest/topics/jinja.html with this example:
+
+----
+{% if grains.os_family == 'RedHat' %}
+  {% set dns_cfg = '/etc/named.conf' %}
+{% elif grains.os_family == 'Debian' %}
+  {% set dns_cfg = '/etc/bind/named.conf' %}
+{% else %}
+  {% set dns_cfg = '/etc/named.conf' %}
+{% endif %}
+dns_conf:
+  file.managed:
+    - name: {{ dns_cfg }}
+    - source: salt://dns/files/named.conf
+----
 
 
 
