fix internal link and drive-by edit
https://github.com/SUSE/spacewalk/issues/22454
https://github.com/uyuni-project/uyuni-docs/issues/2309

--- a/modules/client-configuration/pages/autoinst-profiles.adoc
+++ b/modules/client-configuration/pages/autoinst-profiles.adoc
@@ -130,7 +130,7 @@ These are the most important sections in the {ay} installation file for installi
 
 For more information about {ay}, see https://doc.opensuse.org/projects/autoyast/.
 
-A more recent, Salt-based alternative to AutoYast, is Yomi.
+A more recent, Salt-based alternative to {ay}, is Yomi.
 For information about Yomi, see xref:specialized-guides:salt/salt-yomi.adoc[Install with Yomi].
 
 
@@ -184,7 +184,7 @@ Within a profile, the [guimenu]``Autoinstallation File`` tab allows you to see t
 
 * For information about variables, see xref:client-configuration:autoinst-profiles#variables[Variables].
 * For information about code snippets, see xref:client-configuration:autoinst-profiles#code-snippets[Code Snippets].
-* For information about escaping symbols or whole sections, see xref:client-configuration:autoinst-profiles#variables[Escaping].
+* For information about escaping symbols or text blocks, see xref:client-configuration:autoinst-profiles#escaping[Escaping].
 
 
 
@@ -271,9 +271,11 @@ $SNIPPET('my_partition')
 If the autoinstallation file contains shell script variables like ``$(example)``, the content needs to be escaped with a backslash: ``\$(example)``.
 Escaping the ``$`` symbol prevents the templating engine from evaluating the symbol as an internal variable.
 
-Long scripts or strings can be escaped by wrapping them with the ``\#raw`` and ``\#end`` directives.
+// FIXME: "#raw" or "#end raw"?
+Text blocks such as code fragments or scripts can be escaped by wrapping them with the ``\#raw`` and ``\#end`` directives.
 For example:
 
+// FIXME: "#raw" or "#end raw"?
 ----
 #raw
 #!/bin/bash
