disabling automatic channel selection for cloned channels https://bugzilla.suse.com/show_bug.cgi?id=1211047 https://github.com/SUSE/spacewalk/issues/22461

--- a/modules/administration/pages/content-lifecycle.adoc
+++ b/modules/administration/pages/content-lifecycle.adoc
@@ -8,7 +8,18 @@ Content lifecycle management allows you to select software channels as sources, 
 
 While you cannot directly modify vendor channels, you can clone them and then modify the clones by adding or removing packages and custom patches.
 You can assign these cloned channels to test clients to ensure they work as expected.
-Then, when all tests pass, you can promote them to production servers.
+
+[NOTE]
+====
+By default, cloned vendor channels match the original vendor channel and automatically select the dependencies.
+You can disable the automatic selection for cloned channels by adding the following option in [path]``/etc/rhn/rhn.conf``:
+
+----
+java.cloned_channel_auto_selection = false
+----
+====
+
+Then, when all tests pass, you can promote the cloned channels to production servers.
 
 This is achieved through a series of environments that your software channels can move through on their lifecycle.
 Most environment lifecycles include at least test and production environments, but you can have as many environments as you require.
