--- a/modules/client-configuration/pages/autoinst-intro.adoc
+++ b/modules/client-configuration/pages/autoinst-intro.adoc
@@ -47,5 +47,6 @@ For more information about {cobbler}, see https://cobbler.readthedocs.io.
 [NOTE]
 ====
 {suse} only supports {cobbler} functions that are available in the {productname} {webui}, or through the {productname} API.
+The sole command-line command supported by Cobbler is [command]``buildiso``.
 Only supported features are documented here.
 ====
