cleanup https://github.com/SUSE/spacewalk/issues/22458 https://github.com/uyuni-project/uyuni-docs/issues/2307

--- a/modules/client-configuration/pages/automatic-client-registration.adoc
+++ b/modules/client-configuration/pages/automatic-client-registration.adoc
@@ -1,31 +1,36 @@
 [[automatic-client-registration]]
-= Automatic Registration of Clients Created by Terraform
+= Automatic registration of clients created by Terraform
 
 
 New clients created by Terraform can be automatically registered to {productname}.
 Registration can be achieved in two ways:
 
-* cloud-init based registration
+* [literal]``cloud-init`` based registration
 * remote execution provisioner based registration
 
-[[cloud-init-based-client-registration]]
-== cloud-init based client registration
 
-Registering by leveraging cloud-init is the preferred way of automatic registering of the newly created virtual machines. 
+
+[[cloud-init-based-client-registration]]
+== [literal]``cloud-init`` based client registration
+
+Registering by leveraging [literal]``cloud-init`` is the preferred way of automatic registering of the newly created virtual machines.
 This solution avoids configuring an SSH connection to the host.
 It can also be used regardless of the tool used for client creation.
 
-User can pass the set of user data when deploying the image with Terraform, in order to automatically register the machine to {productname}.
-[path]``user_data`` is run only once at bootstrap, and only the first time the machine is started. 
+User can pass the set of user data when deploying the image with Terraform, to automatically register the machine to {productname}.
+[path]``user_data`` is run only once at bootstrap, and only the first time the machine is started.
 
-Before using cloud-init to register clients, the user must configure:
+Before using [literal]``cloud-init`` to register clients, the user must configure:
 
-* Bootstrap script. See xref:client-configuration:registration-bootstrap.adoc[]
-* Activation keys. See xref:client-configuration:activation-keys.adoc[]
+* Bootstrap script.
+  For more information, see xref:client-configuration:registration-bootstrap.adoc[].
+* Activation keys.
+  For more information, see xref:client-configuration:activation-keys.adoc[].
 
 
-This command will download the bootstrap script and register the new machine when it is created. 
-It should be added to the cloud-init configuration:
+The following command will download the bootstrap script and register the new machine when it is created.
+It should be added to the [literal]``cloud-init`` configuration:
+
 ----
 curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 ----
@@ -35,20 +40,18 @@ curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 Anytime [path]``user_data`` is updated to change the provisioning, Terraform will destroy and then recreate the machines with a new IP, etc.
 ====
 
-For more information about cloud-init on AWS, see:  
-. https://registry.terraform.io/providers/hashicorp/template/latest/docs/data-sources/cloudinit_config
+For more information about [literal]``cloud-init`` on AWS, see https://registry.terraform.io/providers/hashicorp/template/latest/docs/data-sources/cloudinit_config.
 
-For a cloud-init example, see:  
-. https://registry.terraform.io/providers/hashicorp/cloudinit/latest/docs/data-sources/cloudinit_config#example-usage
+For a [literal]``cloud-init`` example, see https://registry.terraform.io/providers/hashicorp/cloudinit/latest/docs/data-sources/cloudinit_config#example-usage.
 
 
 
 [[remote-exec-provisioner-based-client-registration]]
-== remote-exec provisioner based registration
+== [literal]``remote-exec`` provisioner based registration
 
-The second solution for automatic registering of the  newly created virtual machines uses Terraform's remote-exec provisioner.
+The second solution for automatic registering of the newly created virtual machines uses Terraform's [literal]``remote-exec`` provisioner.
 
-remote-exec provisioner interacts with the newly created machines. 
+[literal]``remote-exec`` provisioner interacts with the newly created machines.
 It opens an SSH connection and can run commands on that machine.
 
 [IMPORTANT]
@@ -56,18 +59,20 @@ It opens an SSH connection and can run commands on that machine.
 When using [literal]``remote-exec`` provisioner to register clients, the user must ensure that the machine running Terraform will have access to the new virtual machine after its creation.
 ====
 
-The remaining requirements are the same as when using <<cloud-init-based-client-registration>> 
+The remaining requirements are the same as when using <<cloud-init-based-client-registration>>:
 
-* Bootstrap script. See xref:client-configuration:registration-bootstrap.adoc[]
-* Activation keys. See xref:client-configuration:activation-keys.adoc[]
+* Bootstrap script.
+  For more information, see xref:client-configuration:registration-bootstrap.adoc[].
+* Activation keys.
+  For more information, see xref:client-configuration:activation-keys.adoc[].
 
-
-This command will download the bootstrap script and register the new machine when it is created.
+The following command will download the bootstrap script and register the new machine when it is created.
 It should be defined as the remote command to run:
+
 ----
 curl -s http://hub-server.tf.local/pub/bootstrap/bootstrap-default.sh | bash -s
 ----
 
-For more information about remote-exec provisioner, see:
-https://www.terraform.io/docs/provisioners/remote-exec.html
+For more information about [literal]``remote-exec`` provisioner, see
+https://www.terraform.io/docs/provisioners/remote-exec.html.
 
