--- a/modules/installation-and-upgrade/pages/upgrade-intro.adoc
+++ b/modules/installation-and-upgrade/pages/upgrade-intro.adoc
@@ -18,15 +18,29 @@ ifeval::[{suma-content} == true]
 {productname} uses an [literal]``X.Y.Z`` versioning schema.
 To determine which upgrade procedure you need, look at which part of the version number is changing.
 
+[NOTE]
+====
+The version number below are just examples.
+Do not understand them as most recent available options.
+{suse} uses these numbers for illustrative purposes only!
+====
+
 Major Version Upgrade (X Upgrade)::
 Upgrading to the next major version.
-For example, upgrading from 3.2 to 4.1.
-This type of upgrade does not apply to 4.3.
+Such a major upgrade usually is an upgrade from X.Y to X+1.0 or to X+1.1, where Y is the latest minor version of the X series.
+For example:
+
+* From version 3.2 to 4.0 or to 4.1 (upgrading directly from 3.2 to 4.2 or later is s not supported).
+* From 4.3 to 5.0 or, probably, to 5.1 (upgrading directly from 4.3 to 5.2 or later probably is not supported).
 
 Minor Version Upgrade (Y Upgrade)::
 Upgrading to the next minor version.
 This is often referred to as a product migration, service pack migration, or SP migration.
-For example, upgrading from 4.2 to 4.3.
+Such a minor upgrade is an upgrade from X.Y to X.Y+1.
+For example:
+
+* From 4.2 to 4.3.
+* From 5.0 to 5.1.
 
 Patch Level Upgrade (Z Upgrade)::
 Upgrading within the same minor version.
