Fixed the link.

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -21,7 +21,7 @@ The image store for the Kiwi build type is pre-defined as a file system director
 {productname} serves the image store over HTTPS from [literal]``//<SERVER-FQDN>/os-images/``.
 The image store location is unique and is not customizable.
 
-Images are always stored in [path]``/srv/www/os-image/<organization id>``.
+Images are stored in [path]``/srv/www/os-image/<organization id>``.
 
 
 
@@ -36,7 +36,7 @@ image::image-building.png[scaledwidth=80%]
 === Requirements
 
 
-The containers feature is available for Salt clients running {sles} 12 or later.
+The containers feature is available for {salt} clients running {sles} 12 or later.
 Before you begin, ensure your environment meets these requirements:
 
 * A published git repository containing a dockerfile and configuration scripts.
@@ -44,10 +44,8 @@ Before you begin, ensure your environment meets these requirements:
 * A properly configured image store, such as a Docker registry.
 +
 
-For more information on Containers, see:
-+
-
-* https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-container.html
+For more information on Containers, see https://documentation.suse.com/container/all/html/Container-guide/.
+//https://documentation.suse.com/sles/15-SP3/html/SLES-all/book-container.html
 
 
 
@@ -56,7 +54,7 @@ For more information on Containers, see:
 
 
 To build images with {productname}, you need to create and configure a build host.
-Container build hosts are Salt clients running {sle} 12 or later.
+Container build hosts are {salt} clients running {sle} 12 or later.
 This section guides you through the initial configuration for a build host.
 
 
@@ -77,7 +75,7 @@ For example, you must build Raspberry Pi {sles}{nbsp}15 SP3 images on a Raspber
 
 From the {productname} {webui}, perform these steps to configure a build host:
 
-. Select a Salt client to be designated as a build host from the menu:Systems[Overview] page.
+. Select a {salt} client to be designated as a build host from the menu:Systems[Overview] page.
 . From the [guimenu]``System Details`` page of the selected client assign the containers modules.
   Go to menu:Software[Software Channels] and enable the containers module (for example, [guimenu]``SLE-Module-Containers15-Pool`` and [guimenu]``SLE-Module-Containers15-Updates``).
   Confirm by clicking btn:[Change Subscriptions].
@@ -392,7 +390,7 @@ For more information about the Kiwi build system, see the https://doc.opensuse.o
 [[at.images.kiwi.requirements]]
 === Requirements
 
-The Kiwi image building feature is available for Salt clients running {sles}{nbsp}12 and {sles}{nbsp}11.
+The Kiwi image building feature is available for {salt} clients running {sles}{nbsp}12 and {sles}{nbsp}11.
 //SLE15 images support is not yet released for SUMA4, but is part of SUMA4.0.4 as tech preview
 //From {sles}{nbsp}15, ``kiwi-ng`` is used instead of the legacy Kiwi.
 
@@ -413,7 +411,7 @@ For more information, see the documentation of the underlying system.
 
 [WARNING]
 ====
-The build host must be a Salt client.
+The build host must be a {salt} client.
 Do not install the build host as a traditional client.
 ====
 
@@ -423,7 +421,7 @@ Do not install the build host as a traditional client.
 === Create a Build Host
 
 To build all kinds of images with {productname}, create and configure a build host.
-OS Image build hosts are Salt clients running on {sles}{nbsp}15 (SP2 or later), {sles}{nbsp}12 (SP3 or later) or {sles}{nbsp}11 SP4.
+OS Image build hosts are {salt} clients running on {sles}{nbsp}15 (SP2 or later), {sles}{nbsp}12 (SP3 or later) or {sles}{nbsp}11 SP4.
 
 This procedure guides you through the initial configuration for a build host.
 
@@ -743,8 +741,8 @@ During the inspection phase {susemgr} collects information about the image:
 
 [NOTE]
 ====
-If the built image type is `PXE`, a Salt pillar is also generated.
-Image pillars are stored in the database and the Salt subsystem can access details about the generated image.
+If the built image type is `PXE`, a {salt} pillar is also generated.
+Image pillars are stored in the database and the {salt} subsystem can access details about the generated image.
 Details include where the image files are located and provided, image checksums, information needed for network boot, and more.
 
 The generated pillar is available to all connected clients.
@@ -757,7 +755,7 @@ The generated pillar is available to all connected clients.
 
 
 Building an image requires several dependent steps.
-When the build fails, investigating Salt states results and build log can help identify the source of the failure.
+When the build fails, investigating {salt} states results and build log can help identify the source of the failure.
 You can carry out these checks when the build fails:
 
 * The build host can access the build sources
