--- a/modules/specialized-guides/pages/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/payg/payg-overview.adoc
@@ -1,6 +1,90 @@
 = Overview of {payg}
-:description: SUSE Manager {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage the images of SUSE Manager on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
-:keywords: Payg, Pay-as-you-go, AWS, Amazon Web Services, Azure, GCP, Google Cloud Compute,  cost-effective, scaling, Cloud Services, SUSE Manager, Monitoring
+:description: {productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage the images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
+:keywords: Payg, Pay-as-you-go, AWS, Amazon Web Services, Azure, GCP, Google Cloud Compute,  cost-effective, scaling, Cloud Services, {productname}, Monitoring
 
-SUSE Manager {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage images of SUSE Manager on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
+{productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage images of SUSE Manager on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
+
+To cater to customers who favor a cloud-centric billing approach, SUSE has recently added the **{productname} Server Family** listing to the AWS Marketplace.
+
+This document introduces the advantages of running {productname}, complemented by the convenience of a new monthly pricing model available through the AWS Marketplace.
+
+== FAQ
+
+=== The listing
+
+**What is the "{productname} PAYG" listing on the AWS Marketplace?**::
+  By selecting the {productname} listing from the AWS Marketplace, customers can deploy {productname} to their cloud environment with the advantage of having monthly billing via AWS.
+
+**Where do I find the {productname} listings?**::
+  The listings can be found on the AWS Marketplace, there are currently two listings:
+
+  * {productname} (Non-EU and non-UK only)
+  * {productname} (EU and UK only)
+
+**Why are there two listings and which one should I use?**::  
+  We have two listings for {productname}, "EU and UK only" and "non-EU and non-UK only". You should select the listing that reflects where your AWS account is billed
+
+**Are these listings available in all countries?**::
+  The {productname} listing on AWS is not available to purchase in all countries.
+  Your billing country is based on the AWS Account IID used to do the deployment.
+  Please read the addendum at the end of this FAQ for a list of countries that can and cannot transact {productname} via the AWS Marketplace.
+
+**My AWS account is in the USA, but I want to deploy {productname} in another AWS region, a region that is in a country where I currently cannot transact, is this possible?**::
+  Yes. If your AWS account is billed to one of the allowed countries, it is possible to deploy {productname} in any AWS region.
+
+**Is this listing available in China?**::
+Whilst it is not possible to transact/bill {productname} via the AWS Marketplace in China, it is possible to deploy into AWS regions in China. 
+Please read the addendum at the end of this FAQ for a list of countries that can and cannot transact {productname} via the AWS Marketplace.
+
+**Is there still a BYOS listing for {productname} in the Marketplace?**::
+**Yes**, for customers that wish to utilize {productname} with existing annual subscriptions, the BYOS {productname} listing is available.
+
+**Is there a {payg} listing available for the {productname} Proxy Server?**::
+**No**. If a {productname} proxy is required as part of the architecture, it is suggested to use the containerized proxy.
+
+
+=== Billing
+
+**I have an existing {productname} subscription; can I use this on AWS?**::
+// We need to document the migration from BYOS -> AWS
+BYOS (Bring Your Own Subscription) {productname} deployments are support on AWS, however, billing will not be via the AWS Marketplace. Once the existing subscription term ends, you can purchase {productname} via the AWS Marketplace and follow the documentation to migrate your deployment so that it will be billed via the AWS Marketplace.
+
+**I have an existing deployment covered by a {productname} subscription; can I use this new listing in AWS for new deployments?**::
+**Yes**, the listing works independently from your existing {productname} subscriptions. Please remember that support routes may be different for deployments using your existing subscription and those billed via the AWS Marketplace.
+
+**Tell me more about how __the billing for {productname}__ works via AWS?**::
+When purchasing {productname} via the AWS Marketplace, the billing is as follows:
+
+* Billing is monthly and handled via the AWS Marketplace.
+* Managed instances are recorded hourly.
+* The peak usage total is calculated for the month.
+* There is a monthly usage charge for each instance in the count.
+* There is a 10 instance minimum, if the peak usage count is less than 10, the charge will be for 10 instances.
+
+**I have existing {sles} for SAP instances prodcured via the AWS Marketplace, will I be charged for these clients?**::
+**No**. {sles} for SAP __on-demand__ instances when purchased via the AWS Marketplace, included LCM entitlement for {productname}. Providing there are at least 10 {sles} for SAP instances, there will be no additional charge to manage these with this {productname} listing.
+
+**Is there a way to try {productname} before purchasing?**::
+If using the {productname} {payg} listing in the AWS Marketplace, billing will commence from the time of deployment / applicable clients are on-boarded to {productname}.
++
+There is a Bring-Your-Own-Subscription (BYOS) listing for {productname} in the AWS Marketplace which can be used, a trial subscription key can be otained via the SUSE website. This deployment cannot be directly converted to allow billing via the AWS Marketplace.
++
+To benefit from monthly billing via the AWS Marketplace, the BYOS {productname} deployment will need to be migrated to a {productname} deployed via the AWS Marketplace.
+
+**How does SUSE calculate the ‘number of managed instances’ to bill for?**:: 
+Billing is based on the number of managed clients. 
+Below are three examples of how the average node count is calculated, check the table below for the detail.  
+
+* **Static usage**:   
+Using SUSE Manager on 10 nodes, for 1 month with no additional nodes added in the month.  
+
+* **Bursting Model**:  
+Using SUSE Manager on 10 nodes for three weeks in the month,  bursting to 30 nodes for one week. 
+
+* **Transient model**:  
+A temporary deployment of SUSE Manager on 20 nodes for two weeks (336 hours)
+
+
+
+
 
