update faq and attributes

--- a/modules/specialized-guides/pages/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/payg/payg-overview.adoc
@@ -4,7 +4,7 @@
 :toc:
 
 == Introduction to {payg}
-{productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage images of SUSE Manager on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
+{productname} {payg} or {payglongform} is a flexible and cost-effective solution that allows users to manage and monitor their systems. Unlike traditional subscription models, {payg} does not require a long-term subscription. Users can leverage images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
 
 To cater to customers who favor a cloud-centric billing approach, SUSE has recently added the **{productname} Server Family** listing to the AWS Marketplace.
 
@@ -63,7 +63,7 @@ When purchasing {productname} via the AWS Marketplace, the billing is as follows
 * There is a monthly usage charge for each instance in the count.
 * There is a 10 instance minimum, if the peak usage count is less than 10, the charge will be for 10 instances.
 
-**I have existing {sles} for SAP instances prodcured via the AWS Marketplace, will I be charged for these clients?**::
+**I have existing {sles} for SAP instances procured via the AWS Marketplace, will I be charged for these clients?**::
 **No**. {sles} for SAP __on-demand__ instances when purchased via the AWS Marketplace, included LCM entitlement for {productname}. Providing there are at least 10 {sles} for SAP instances, there will be no additional charge to manage these with this {productname} listing.
 
 **Is there a way to try {productname} before purchasing?**::
@@ -78,15 +78,84 @@ Billing is based on the number of managed clients.
 Below are three examples of how the average node count is calculated, check the table below for the detail.  
 
 * **Static usage**:   
-Using SUSE Manager on 10 nodes, for 1 month with no additional nodes added in the month.  
+Using {productname} on 10 nodes, for 1 month with no additional nodes added in the month.  
 
 * **Bursting Model**:  
-Using SUSE Manager on 10 nodes for three weeks in the month,  bursting to 30 nodes for one week. 
+Using {productname} on 10 nodes for three weeks in the month,  bursting to 30 nodes for one week. 
 
 * **Transient model**:  
-A temporary deployment of SUSE Manager on 20 nodes for two weeks (336 hours)
+A temporary deployment of {productname} on 20 nodes for two weeks (336 hours)
+
+[caption=]
+.Node Count Calculation
+[cols="3,3,3,3"]
+|===
+| |Managed Instances 
+(Managed instances counted at each check-in)  | Peak Usage  |Billed for 
+
+| Static Usage
+| 10
+| 10 
+| 10
 
 
+| Bursting Model 
+| 10 (3 weeks)
 
+30 (1 week)     
+| 30 
+| 30 
 
+| Transient Model 
+|20 
+|20 
+|20  
+|===
+
+**Are special commercial terms available?**::
+Depending on the deployment, it may be possible to secure special commercial terms.(e.g. An annual subscription). This will be handled via an AWS Private offer, please contact SUSE for more information. 
+
+**Can my spend on {productname} count towards my AWS Enterprise Discount Program?**:: 
+**Yes**, it can. Please contact your AWS Sales Team for more details. 
+
+**How do I purchase {productname} / LCM subscriptions for additional managed-instances?**:: 
+Once {productname} has been deployed from the listing on AWS and billing is active, there is no need to make a specific purchase to manage additional instances. Billing is dynamic and based on the number of instances {productname} is managing. Just on-board additional instances to {productname} as needed, this will be reflected in your Marketplace bill. 
+
+**Is this an annual commitment, will it auto-renew?**:: 
+By default, the {productname} listing in AWS is billed on a monthly cycle, based on usage. Billing is on-going for as long as {productname} is deployed. 
++
+It is possible to set up an annual commitment via an AWS Private Offer, these will need to be reviewed and renewed at the end of the term, or the deployment will drop back to the default monthly billing cycle. 
+
+**Is there a volume discount / tiered pricing built in to the AWS Listing?**:: 
+There is no volume discount available at this time. 
+
+**I no longer require support, how can I end the subscription?**:: 
+If you no longer require support there are 2 options: 
+
+* Unregister all systems from the {productname} Server 
+* Terminate the {productname} instance
+
+=== Technical (Billing)  
+
+Do I need any special or additional infrastructure to setup {productname} billing via AWS Marketplace? 
+
+No, all components needed to handle the billing are part of the {productname} code-base. 
+
+What is the deployment mechanism for {productname} on the AWS Marketplace? 
+
+The AWS Marketplace listing for {productname} is deployed via an (Amazon Machine Image) AMI. 
+
+What version of {productname} is installed when using the Marketplace listing? 
+
+The AWS Marketplace listing for {productname} is tied to a specific version of {productname} (4.3.8 at launch).  Future listings will typically include the latest version available at the time AMI creation.  Please check the listing for further information. 
+
+I need a prior version of {productname} installed, can I still use the listing? 
+
+No. There is no choice over the {productname} version when deploying using the AWS Marketplace listing.  If a prior version of {productname} is required, this will need to be installed manually using the standard documentation. 
+
+How often is the listing updated (including the version of {productname} etc.)? 
+
+The Marketplace listing is tied to a specific version of {productname}, usually the latest version available at the time of the listing.  
+
+Typically, the listing in AWS Marketplace is updated quarterly, or more frequently if there are security issues.  
 
