added technical billing

--- a/modules/specialized-guides/pages/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/payg/payg-overview.adoc
@@ -137,25 +137,22 @@ If you no longer require support there are 2 options:
 
 === Technical (Billing)  
 
-Do I need any special or additional infrastructure to setup {productname} billing via AWS Marketplace? 
+**Do I need any special or additional infrastructure to setup {productname} billing via AWS Marketplace?**::
+**No**, all components needed to handle the billing are part of the {productname} code-base. 
 
-No, all components needed to handle the billing are part of the {productname} code-base. 
-
-What is the deployment mechanism for {productname} on the AWS Marketplace? 
-
+**What is the deployment mechanism for {productname} on the AWS Marketplace?**:: 
 The AWS Marketplace listing for {productname} is deployed via an (Amazon Machine Image) AMI. 
 
-What version of {productname} is installed when using the Marketplace listing? 
-
+**What version of {productname} is installed when using the Marketplace listing?**:: 
 The AWS Marketplace listing for {productname} is tied to a specific version of {productname} (4.3.8 at launch).  Future listings will typically include the latest version available at the time AMI creation.  Please check the listing for further information. 
 
-I need a prior version of {productname} installed, can I still use the listing? 
+**I need a prior version of {productname} installed, can I still use the listing?**:: 
+**No**. There is no choice over the {productname} version when deploying using the AWS Marketplace listing.  If a prior version of {productname} is required, this will need to be installed manually using the standard documentation. 
 
-No. There is no choice over the {productname} version when deploying using the AWS Marketplace listing.  If a prior version of {productname} is required, this will need to be installed manually using the standard documentation. 
-
-How often is the listing updated (including the version of {productname} etc.)? 
-
+**How often is the listing updated (including the version of {productname} etc.)?**:: 
 The Marketplace listing is tied to a specific version of {productname}, usually the latest version available at the time of the listing.  
-
++
 Typically, the listing in AWS Marketplace is updated quarterly, or more frequently if there are security issues.  
+
+
 
